<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_header"
        android:clickable="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/panelNameList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="2dp"
            android:text="Panelname"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearhead"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_header"
        android:clickable="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/head4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:gravity="left"
            android:padding="2dp"
            android:text="Nickname" />

        <TextView
            android:id="@+id/head1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/head1" />

        <TextView
            android:id="@+id/head2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" " />
        
         <TextView
             android:id="@+id/head3"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
             android:text="@string/head3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/android:empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_names" />
    </LinearLayout>

</LinearLayout>